* 0.138

- Add toJsonWithLengthLimit to JsonCodec
- Fix version check in JMX module to work with -ea Java versions
- Move type name to end of JsonCodec error message

* 0.137

- Set ThreadContextClassLoader to null when loading bval

* 0.136

- Revert Jetty to 9.3.9.M1

* 0.135

- Add ThreadLocalCache
- Upgrade to Jackson 2.8.1
- Extract units to a standalone project
- Prevent self-supression in Closeables

* 0.134

- Add ConditionalModule
- Alternative JMX agent implementation for Java 8 vs 9

* 0.133

- Fix issue with IntelliJ mishandling of system-scoped dependencies

* 0.132

- Upgrade Jetty to 9.3.11.v20160721

* 0.131

- Statically configure logging for Jetty HTTP client

* 0.130

- Move Jetty and Jersey dependencies from Airbase
- Add getField method to EventTypeMetadata

* 0.129

- Add CpuTimer to stats
- Add FileBodyGenerator for HTTP client
- Add TrustStore configuration for HTTP client
- Expose EventTypeMetadata and EventFieldMetadata classes
- Remove requirement that nested event classes have no name
- Ignore EOFException (caused by client disconnect) while writing JSON HTTP response
- Upgrade Jetty to 9.3.11.M0. This fixes a race when using async responses

* 0.128

- Remove BoundedThreadPool
- Use default thread count for TestingHttpServerModule
- Support building prefixed configs in AbstractConfigurationAwareModule

* 0.127

- Remove all usage of ThreadGroup
- Make HTTP client response headers case insensitive
- Add HTTP/2 support in HTTP server for HTTP (not HTTPS)
- Add HTTP/2 support in HTTP client for HTTP (off by default)
- Add BoundedThreadPool

* 0.126

- Upgrade Jetty to 9.3.8.v20160314
- Upgrade Jersey to 2.22.2
- Add getQuantilesUpperBound() and getQuantilesLowerBound() to QuantileDigest

* 0.125

- Add JMX stats for HTTP response codes and failures
- Fix broken gzip handling in HTTP server
- Fix typo for keytab option in SpnegoAuthentication
- Fix thread leak in HTTP client when using anonymous pool

* 0.124
