@@ -90,7 +90,7 @@ public class JsonResponseHandler<T> implements ResponseHandler<T, RuntimeExcepti
         }
         catch (IllegalArgumentException e) {
             String json = new String(bytes, UTF_8);
-            throw new IllegalArgumentException("Unable to create " + jsonCodec.getType() + " from JSON response:\n" + json, e);
+            throw new IllegalArgumentException(String.format("Unable to create %s from JSON response:\n[%s]", jsonCodec.getType(), json), e);
         }
     }
 }
