@@ -3,6 +3,7 @@
 - Add toJsonWithLengthLimit to JsonCodec
 - Fix version check in JMX module to work with -ea Java versions
 - Move type name to end of JsonCodec error message
+- Add brackets around JSON in HTTP client response handler error messages
 
 * 0.137
 
